--- a/day_1/style.css
+++ b/day_1/style.css
@@ -590,7 +590,7 @@ body {
   }
   
   
-  @-webkit-keyframes shiny-btn1 {
+  @keyframes shiny-btn1 {
       0% { -webkit-transform: scale(0) rotate(45deg); opacity: 0; }
       80% { -webkit-transform: scale(0) rotate(45deg); opacity: 0.5; }
       81% { -webkit-transform: scale(4) rotate(45deg); opacity: 1; }
@@ -725,10 +725,10 @@ body {
     background-color: #eaf818;
     background-image: linear-gradient(315deg, #eaf818 0%, #f6fc9c 74%);
      box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5);
-     7px 7px 20px 0px rgba(0,0,0,.1),
-     4px 4px 5px 0px rgba(0,0,0,.1);
-    transition: all 0.3s ease;
-  }
+      /* 7px 7px 20px 0px rgba(0,0,0,.1), */
+     /* 4px 4px 5px 0px rgba(0,0,0,.1); */
+    transition: all 0.3s ease;}
+  
   .btn-14:hover {
     color: #000;
   }
